feat(reader): adaptive chunking v5, title sanitization, regional discovery and srs sessions
- Implement DocumentChunker V5 with adaptive block-density detection and monotonic latching for high block-density content (e.g. theatre).
- Sanitize EPUB section titles with DocumentSectionTitleSanitizer to prevent exposing technical identifiers (id-idp*).
- Filter regional catalog items from global new shelf in discovery home.
- Add vocabulary review session persistence and scheduling policies.